2011-02-13  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Messages waited on are never dispatched
        https://bugs.webkit.org/show_bug.cgi?id=54362
        <rdar://problem/8995051>

        * Platform/CoreIPC/Connection.cpp:
        (CoreIPC::Connection::processIncomingMessage):
        Get the argument encoder from the incoming message.


Canonical link: https://commits.webkit.org/68443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78440 268f45cc-cd09-0410-ab3c-d52691b4dbfc